feat(kernel): 新增 QLExpress4 条件求值网关实现